ppc/aarch: Fix passing thread to runtime after "8073165: Contended Locking fast exit bucket."

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b72
    • ppc, aarch64

        Change 8073165 added a new argument to complete_monitor_unlocking_C(): the current thread. Moving this value into the argument registers before the runtime call issued in the native wrapper was missing on ppc and aarch.

              Assignee:
              Goetz Lindenmaier
              Reporter:
              Goetz Lindenmaier
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: