8129757: ppc/aarch: Fix passing thread to runtime after "8073165: Contended Locking fast exit bucket." Reviewed-by: enevill, simonis, adinn